--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -1,13 +1,20 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
   <div class="container-fluid">
-    <a class="navbar-brand" [routerLink]="['/']">Xone</a>
+    <a class="navbar-brand" [routerLink]="['/']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">Xone</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/trades']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">Trades</a>
+          <a class="nav-link" [routerLink]="['/']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
+            <i class="bi bi-house-door me-1"></i> Home
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/trades']" [routerLinkActive]="['active']">
+            <i class="bi bi-graph-up me-1"></i> Trades
+          </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/categories']" [routerLinkActive]="['active']">Categories</a>
