--- a/src/app/banner/banner.html
+++ b/src/app/banner/banner.html
@@ -17,22 +17,22 @@
       
       <ul class="nav flex-column">
         <li class="nav-item">
-          <a class="nav-link active" href="#">
+          <a class="nav-link" [routerLink]="['dashboard']" [routerLinkActive]="['active']">
             <i class="bi bi-speedometer2 me-2"></i>Dashboard
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" [routerLink]="['wallet']" [routerLinkActive]="['active']">
             <i class="bi bi-wallet2 me-2"></i>My Wallet
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" [routerLink]="['analytics']" [routerLinkActive]="['active']">
             <i class="bi bi-graph-up me-2"></i>Analytics
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" [routerLink]="['settings']" [routerLinkActive]="['active']">
             <i class="bi bi-gear me-2"></i>Settings
           </a>
         </li>
